[metadata]
name = rissmed
version = 0.0.1
author = Jörg Fallmann
author_email = fall@bioinf.uni-leipzig.de
description = RIssmed analyses the change of RNA secondary structure upon binding other molecules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfallmann/RIssmed
project_urls =
    Bug Tracker = https://github.com/jfallmann/RIssmed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = RIssmed
packages = find:
python_requires = >=3.6

[options.packages.find]
where = RIssmed
